syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";

service CompanyJobSkills{
	rpc ReadCompanyJobSkill (CompanyJobSkillsIdRequest) returns (CompanyJobSkillsPayload);
	rpc GetAllCompanyJobSkill (google.protobuf.Empty) returns (AllCompanyJobSkillsPayload);
	rpc CreateCompanyJobSkill (CompanyJobSkillsPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyJobSkill (CompanyJobSkillsPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyJobSkill (CompanyJobSkillsPayload) returns (google.protobuf.Empty);
}

message CompanyJobSkillsIdRequest{
	string Id =1;
}

message CompanyJobSkillsPayload {
	string Id = 1;
	string Job = 2;
	string Skill =3;
	string SkillLevel = 4;
	int32 Importance = 5;
}

message AllCompanyJobSkillsPayload {
	repeated CompanyJobSkillsPayload CompanyJobSkills = 1;
}